--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-<title>index – Interaktiv karta (mobiloptimerad v2)</title>
+<title>index – Interaktiv karta (mobiloptimerad v2.1)</title>
 <style>
   :root { --bg:#0f1115; --ink:#e6e6e6; --muted:#2a3142; --panel:#141822; --shadow: rgba(0,0,0,.45); --accent:#ffd166; --line:#7dd3fc; --vh: 1vh; }
   * { box-sizing: border-box; }
@@ -52,7 +52,7 @@
   #scalebar .bar { height: 6px; background: #e5e7eb; border-radius: 3px; box-shadow: 0 1px 0 rgba(0,0,0,.35) inset; }
   #scalebar .label { margin-top: 6px; text-align: center; opacity: .9; }
 
-  /* Player-banner (avaktiverad i v2) */
+  /* Player-banner (off) */
   #playerBanner { display:none; }
 
   /* Mobiljusteringar */
@@ -139,7 +139,6 @@
   const IS_MOBILE = matchMedia('(max-width: 820px)').matches;
 
   // ===== SKALA =====
-  // 250 000 m = 1073.6 px
   const METERS_PER_PIXEL = 250000 / 1073.6; // ≈ 232.77 m/px
   const MAP_WIDTH = 8192, MAP_HEIGHT = 5462; // fallback
   let metersPerPixelOverride = NaN; 
@@ -176,14 +175,13 @@
   const sbBar = document.getElementById('sbBar');
   const sbLabel = document.getElementById('sbLabel');
 
-  // ===== Kamera (pinch-zoom fixad) =====
-  let scale = 1, MIN = 1, MAX = 24, startScale = 1; // MIN sätts till nära fit senare
+  // ===== Kamera (pinch-zoom + finger-pan stabil) =====
+  let scale = 1, MIN = 1, MAX = 24, startScale = 1; 
   let tx = 0, ty = 0, imgW = 0, imgH = 0;
 
   function getPanBounds(){
     const vw = stage.clientWidth, vh = stage.clientHeight;
     const w = imgW * scale, h = imgH * scale;
-    // Om bilden är mindre än viewport: centrera och lås position
     const centerX = (vw - w) / 2, centerY = (vh - h) / 2;
     if (w <= vw && h <= vh) return { minTx:centerX, maxTx:centerX, minTy:centerY, maxTy:centerY };
     if (w <= vw) return { minTx:centerX, maxTx:centerX, minTy: Math.min(0, vh - h), maxTy: 0 };
@@ -213,38 +211,55 @@
     const w0 = map.naturalWidth || MAP_WIDTH; const h0 = map.naturalHeight || MAP_HEIGHT;
     imgW = w0; imgH = h0;
     const s = Math.min(vw / imgW, vh / imgH);
-    startScale = s; scale = s; // start i fit
-    MIN = startScale * 0.98;   // tillåt bara marginellt mindre än fit för att undvika svart runtom
+    startScale = s; scale = s; 
+    MIN = startScale * 0.98;  
     const w = imgW * scale, h = imgH * scale;
     tx = (vw - w)/2; ty = (vh - h)/2; applyTransform();
   }
 
-  // Mushjul
+  // Mus-hjul
   stage.addEventListener('wheel', e => { e.preventDefault(); const f = e.deltaY < 0 ? 1.15 : 1/1.15; zoomAt(e.clientX, e.clientY, f); }, {passive:false});
 
-  // Pekhändelser med bättre stabilitet
-  const pointers = new Map();
+  // Pekhändelser – FIX: håll endast riktiga pekare i Map
+  const pointers = new Map(); // id -> {x,y}
   let lastDist = null;
-  stage.addEventListener('pointerdown', e => { stage.setPointerCapture(e.pointerId); pointers.set(e.pointerId,{x:e.clientX,y:e.clientY}); });
+  let panStart = null; // {x,y,tx,ty}
+
+  stage.addEventListener('pointerdown', e => {
+    // ignorera höger/mittknapp på mus
+    if (e.pointerType === 'mouse' && e.button !== 0) return;
+    stage.setPointerCapture(e.pointerId);
+    pointers.set(e.pointerId, { x: e.clientX, y: e.clientY });
+    if (pointers.size === 1) panStart = { x: e.clientX, y: e.clientY, tx, ty };
+  });
+
   stage.addEventListener('pointermove', e => {
-    if (!pointers.has(e.pointerId)) return; pointers.set(e.pointerId,{x:e.clientX,y:e.clientY});
+    if (!pointers.has(e.pointerId)) return;
+    pointers.set(e.pointerId, { x: e.clientX, y: e.clientY });
     const pts = [...pointers.values()];
-    if (pts.length === 1){ // pan
-      const p = pts[0]; const d = pointers.get('_start') || {x:p.x,y:p.y,tx,ty};
-      if (!pointers.has('_start')) pointers.set('_start', d);
-      tx = d.tx + (p.x - d.x); ty = d.ty + (p.y - d.y); clampPan(); applyTransform();
-    } else if (pts.length === 2){ // pinch
-      pointers.delete('_start');
+    if (pts.length === 1 && panStart){
+      const p = pts[0];
+      tx = panStart.tx + (p.x - panStart.x);
+      ty = panStart.ty + (p.y - panStart.y);
+      clampPan(); applyTransform();
+    } else if (pts.length === 2){
+      panStart = null; // växla till pinch
       const [a,b] = pts; const midX=(a.x+b.x)/2, midY=(a.y+b.y)/2; const dist = Math.hypot(b.x-a.x, b.y-a.y);
       if (lastDist==null) { lastDist = dist; return; }
       const factor = dist / lastDist; lastDist = dist; zoomAt(midX, midY, factor);
     }
   });
-  function endPointer(e){ pointers.delete(e.pointerId); if (pointers.size<2) lastDist=null; if (!pointers.has('_start')) pointers.delete('_start'); }
-  stage.addEventListener('pointerup', endPointer); stage.addEventListener('pointercancel', endPointer);
+
+  function endPointer(e){
+    pointers.delete(e.pointerId);
+    if (pointers.size < 2) lastDist = null;
+    if (pointers.size === 0) panStart = null; // släpp pan
+  }
+  stage.addEventListener('pointerup', endPointer); 
+  stage.addEventListener('pointercancel', endPointer);
 
   // ===== Lagring (IndexedDB + localStorage) =====
-  const LSK = 'tyraal_markers_meta_v13';
+  const LSK = 'tyraal_markers_meta_v14';
   const DB_NAME = 'tyraal_db'; const DB_STORE = 'notes';
   let db = null;
   function openDB(){ return new Promise((resolve, reject) => { const req = indexedDB.open(DB_NAME, 1); req.onupgradeneeded = () => { db = req.result; if (!db.objectStoreNames.contains(DB_STORE)) db.createObjectStore(DB_STORE, { keyPath: 'id' }); }; req.onsuccess = () => { db = req.result; resolve(db); }; req.onerror = () => reject(req.error); }); }
@@ -322,7 +337,7 @@
     m.addEventListener('contextmenu', async ev => { if (IS_PLAYER) return; ev.preventDefault(); if (confirm('Ta bort denna markering och dess notis?')) { if (openId === id) closePanels(); world.removeChild(m); delete store[id]; saveMeta(); try { await idbSet(id, ''); } catch(_){} } });
     // Dra markör (GM)
     let draggingLocal = false; let dx = 0, dy = 0;
-    m.addEventListener('pointerdown', ev => { if (mode !== 'notes' || IS_PLAYER) return; if (ev.button!==0 && ev.pointerType==='mouse') return; draggingLocal = true; const p=clientToWorldXY(ev.clientX, ev.clientY); dx = p.wx - parseFloat(m.style.left); dy = p.wy - parseFloat(m.style.top); document.body.classList.add('grabbing'); stage.classList.add('grabbing'); ev.preventDefault(); m.setPointerCapture(ev.pointerId); });
+    m.addEventListener('pointerdown', ev => { if (mode !== 'notes' || IS_PLAYER) return; if (ev.pointerType==='mouse' && ev.button!==0) return; draggingLocal = true; const p=clientToWorldXY(ev.clientX, ev.clientY); dx = p.wx - parseFloat(m.style.left); dy = p.wy - parseFloat(m.style.top); document.body.classList.add('grabbing'); stage.classList.add('grabbing'); ev.preventDefault(); m.setPointerCapture(ev.pointerId); });
     m.addEventListener('pointermove', ev => { if (!draggingLocal) return; const p=clientToWorldXY(ev.clientX, ev.clientY); m.style.left = (p.wx - dx) + 'px'; m.style.top = (p.wy - dy) + 'px'; });
     m.addEventListener('pointerup', () => { if (draggingLocal){ draggingLocal=false; document.body.classList.remove('grabbing'); stage.classList.remove('grabbing'); saveMeta(); } });
 
@@ -377,15 +392,11 @@
   function openSheet(state='half'){ setSheetHeight(state); }
 
   // Drag på handtaget
-  let dragStartY = 0; let dragStartState = 'half';
-  sheetHandle.addEventListener('pointerdown', e => { dragStartY = e.clientY; dragStartState = sheetState; sheetHandle.setPointerCapture(e.pointerId); });
+  let dragStartY = 0;
+  sheetHandle.addEventListener('pointerdown', e => { dragStartY = e.clientY; sheetHandle.setPointerCapture(e.pointerId); });
   sheetHandle.addEventListener('pointermove', e => {
     if (!dragStartY) return; const dy = e.clientY - dragStartY; const dir = dy > 0 ? 'down' : 'up';
-    const threshold = Math.abs(dy) > 30;
-    if (threshold){
-      if (dir==='up') setSheetHeight('full'); else setSheetHeight('closed');
-      dragStartY = 0;
-    }
+    if (Math.abs(dy) > 30){ if (dir==='up') setSheetHeight('full'); else setSheetHeight('closed'); dragStartY = 0; }
   });
   sheetHandle.addEventListener('pointerup', ()=> dragStartY=0);
 
@@ -400,7 +411,7 @@
   function updateReadout(){ const pxPerKm = 1000 / getMetersPerPixel(); readout.textContent = 'Skala: ' + Math.round(pxPerKm) + ' px/km'; }
   updateReadout();
   function updateMeasurePath(){ if (!measurePoints.length) { if (measurePath) { measurePath.remove(); measurePath=null; } updateReadout(); return; } const d = measurePoints.map((p,i)=> (i? 'L':'M') + p.x + ' ' + p.y).join(' '); if (!measurePath){ measurePath = document.createElementNS('http://www.w3.org/2000/svg','path'); measurePath.setAttribute('class','measure-line'); overlay.appendChild(measurePath); } measurePath.setAttribute('d', d); let totalPx = 0; for (let i=1;i<measurePoints.length;i++){ const a=measurePoints[i-1], b=measurePoints[i]; totalPx += Math.hypot(b.x-a.x, b.y-a.y); } readout.textContent = 'Total: ' + formatMeters(totalPx * getMetersPerPixel()); }
-  stage.addEventListener('click', e => { if (mode!=='measure') return; const rect=stage.getBoundingClientRect(); const { wx, wy } = clientToWorldXY(e.clientX, e.clientY); measurePoints.push({x:wx,y:wy}); updateMeasurePath(); });
+  stage.addEventListener('click', e => { if (mode!=='measure') return; const { wx, wy } = clientToWorldXY(e.clientX, e.clientY); measurePoints.push({x:wx,y:wy}); updateMeasurePath(); });
 
   // ===== Skallinje =====
   const SCALE_CANDIDATES = [500, 1000, 2000, 5000, 10000, 20000, 50000, 100000, 200000];
